[package]
name = "ustchat"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
aes = "0.9"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ecb = { version = "0.2", features = ["alloc"] }
rand = "0.10"
regex = { version = "1", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "system-proxy", "json", "stream", "cookies", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
